# ascii-stream

./: .gitignore
backend/: CMakeLists.txt  websocket-server.js
backend/services/: capture.cpp  process_frame.py  rle.js  websocket.js
frontend/: index.html  script.js
frontend/js/: renderer.js  video.js  websocket.js
frontend/public/: index.html  style.css
